<resources>
    <string name="app_name">PDX Farm Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_crop_list">CropListActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="any_useful_info_here">Any useful info here</string>
    <string name="public_prompt">Is it publicly accessible?</string>
    <string name="barter_prompt">Would you like to barter?</string>
    <string name="add_item">Add Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
