<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="0dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_item"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:hint="Item Name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_location"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:inputType="textPostalAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_description"
            android:layout_width="334dp"
            android:layout_height="83dp"

            android:hint="@string/any_useful_info_here"
            android:inputType="textMultiLine"
            android:minLines="4" />

    </android.support.design.widget.TextInputLayout>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/public_radio">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_prompt"
                />
            <RadioButton android:id="@+id/public_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/public_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/barter_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barter_prompt" />

            <RadioButton
                android:id="@+id/barter_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/barter_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/no" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_addItem"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/add_item" />


    </LinearLayout>
</ScrollView>